tests/fixtures/invalid/const_struct_field_assignment.c
struct Point {
    int x;
    int y;
};

int main() {
    const struct Point point;
    point.x = 1;
    return point.x;
}
